<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_item_weights"
            android:icon="@drawable/ic_fitness_center_black_24dp"
            android:title="Workout" />
        <item
            android:id="@+id/nav_item_progress"
            android:icon="@drawable/ic_trending_up_black_24dp"
            android:title="Progress" />
        <item
            android:id="@+id/nav_item_table"
            android:icon="@drawable/ic_dehaze_black_24dp"
            android:title="Table"/>

        <item
            android:id="@+id/nav_item_notes"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="Notes"/>
        <item
            android:id="@+id/nav_item_calculator"
            android:icon="@drawable/ic_keyboard_black_24dp"
            android:title="1RPM Calculator"/>
    </group>


</menu>
