<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ashkan.a531.Fragments.TableFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginLeft="64dp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="right"
        android:layout_weight="1">
    <TextView
        style="@style/GridLayoutTextView"
        android:layout_marginLeft="24dp"
        android:text="Bench Press" />

    <TextView
        style="@style/GridLayoutTextView"
        android:text="Squat" />

    <TextView
        style="@style/GridLayoutTextView"
        android:text="Deadlift" />

    <TextView
        style="@style/GridLayoutTextView"
        android:text="Overhead Press" />
</LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/table_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/table_item"></android.support.v7.widget.RecyclerView>
    </FrameLayout>

    <Button
        android:id="@+id/update_table_button"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Update" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_table_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="8dp"
        android:src="@drawable/ic_add_black_24dp"/>

</LinearLayout>
