<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="percentageOfWeight"
            type="int"/>
        <variable
            name="currentNumberOfReps"
            type="int"/>
        <variable
            name="setNumber"
            type="int"/>
        <variable
            name="oneRepMax"
            type="int"/>
    </data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="131dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="16dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteY="24dp"
                tools:layout_editor_absoluteX="22dp">

                <TextView
                    android:id="@+id/weight_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    tools:text="160 * 3"
                    android:text="@{setNumber == 3 || setNumber == 9 ? String.valueOf(oneRepMax) + ` * ` + String.valueOf(currentNumberOfReps) + `+`:String.valueOf(oneRepMax) + ` * ` + String.valueOf(currentNumberOfReps)}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/set_number_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Set 1"
                    android:text="@{`Set `+setNumber}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintVertical_bias="0.5" />

                <TextView
                    android:id="@+id/percentage_of_weight_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="8dp"
                    tools:text="60%"
                    android:text="@{String.valueOf(percentageOfWeight)+`%`}"
                    app:layout_constraintLeft_toLeftOf="@+id/set_number_text_view"
                    app:layout_constraintTop_toBottomOf="@+id/set_number_text_view" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</layout>