...
    android:focusableInTouchMode="true"
    tools:layout_editor_absoluteY="0dp"
    tools:layout_editor_absoluteX="8dp">


    <TextView
            android:id="@+id/type_of_exercise_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_weight="1"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
...
            app:layout_constraintRight_toRightOf="parent"
            tools:text="Bench Press"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.501" />

    <EditText
        android:id="@+id/weight_edit_text_view"
        app:layout_constraintVertical_weight="1"
        android:imeOptions="actionDone"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
...
