...
        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="24dp"
            android:text="75%"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eighty_text_view" />

        <TextView
            android:id="@+id/seventy_five_text_view"
            android:layout_width="wrap_content"
...
        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="0dp"
            android:text="95%"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/one_Rep_Max_Text_View" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
...
